--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -51,7 +51,7 @@ else
                             Edit
                         </a>
                         <a class="btn btn-danger" asp-controller="Book" asp-action="Delete" asp-route-id="@book.Id"
-                   onclick="return confirm('Are you sure to delete this student?');">
+                   onclick="return confirm('Are you sure to delete this book?');">
                             Delete
                         </a>
 
