--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -17,11 +17,9 @@ else
     <div class="container text-center">
         <table class="table table-bordered text-center bg-light">
             <tr>
-                <th class="h3 text-center" colspan="6">Book List </th>
-                <th class="">
-                    <a class="btn btn-success" asp-controller="Book" asp-action="Add">
-                        Add
-                    </a>
+                <th class="h3 text-center" colspan="6">Book List</th>
+                <th>
+                    <a class="btn btn-success" asp-controller="Book" asp-action="Add">Add</a>
                 </th>
             </tr>
             <tr>
