--- a/Views/Category/SendRequest.cshtml
+++ b/Views/Category/SendRequest.cshtml
@@ -1,6 +1,6 @@
-﻿@model FPTBook.Models.Category
+﻿@model FPTBook.Models.Request
 
-<form class="card p-3 bg-light" method="post" asp-controller="Category" asp-action="Add">
+<form class="card p-3 bg-light" method="post" asp-controller="Category" asp-action="SendRequest">
     <h4 class="text text-success">Add new Category</h4>
     <div class="form-group">
         <label class="h6 text-primary" asp-for="@Model.Name"></label>
@@ -13,6 +13,6 @@
         <span class="text-danger" asp-validation-for="@Model.Description"></span>
     </div>
     <div class="form-group">
-        <input class="btn btn-warning" type="submit" value="Add" />
+        <input class="btn btn-warning" type="submit" value="Send Request" />
     </div>
 </form>
