--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model List<Category>
 
-<table class="table table-danger">
+<table class="table">
     <tr>
         <th colspan="3">Category List</th>
         <th>
-            <a class="btn btn-primary" asp-controller="Category" asp-action="Add">Add</a>
+            <a class="btn btn-primary" asp-controller="Category" asp-action="SendRequest">Add</a>
         </th>
     </tr>
     <tr>
