--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewData["Title"] - FPTBook</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/index/demo.css" />
+    <link rel="stylesheet" href="~/css/index/style.css"/>
 </head>
 <body>
     <header>
@@ -18,6 +20,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
+                    
                     @if (User.Identity.IsAuthenticated && User.IsInRole("StoreOwner"))
                     {
                         <ul class="navbar-nav flex-grow-1">
@@ -30,6 +33,7 @@
                         </ul>
                     }
                 </div>
+                <a>Logoutaaaaaaaaa</a>
             </div>
         </nav>
     </header>
