--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -3,65 +3,88 @@
 
 @{
     ViewData["Title"] = "Log in";
+    Layout = "";
 }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - FPTBook</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/index/demo.css" />
+    <link rel="stylesheet" href="~/css/index/style.css" />
+</head>
+    <style>
+        body {
+            background-image: url(https://mdbootstrap.com/img/new/fluid/city/008.jpg);
+            width: 100%;
+            height: 100%;
+            background-size: cover;        
+        }
+    </style>
 
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
 
-<div id="intro" class="bg-image shadow-2-strong">
-    <div class="mask d-flex align-items-center h-100" style="background-color: rgba(0, 0, 0, 0.8);">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-xl-5 col-md-8">
-                    <section>
-                        <form id="account" method="post">
-                            <h1 class="text-center text-white">@ViewData["Title"]</h1>
-                        <hr />
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <div class="form-group text-white">
-                            <label asp-for="Input.Email"></label>
+<body>
+    <!-- Background image -->
+        <div >
+            <div >
+            <div class="container">
+                    <div class="row justify-content-center" style="padding-top: 50px; padding-bottom: 30px">
+                    <div class="col-xl-10 col-md-10" style="padding-top: 50px; padding-bottom: 50px">
+                        <form class="bg-white rounded shadow-5-strong p-5">
+                                <h1 class="text-center">Login</h1>
+                            <!-- Email input -->
+                            <div class="form-group">
+                                <label asp-for="Input.Email"></label>
                                 <input asp-for="Input.Email" class="form-control" />
-                            <span asp-validation-for="Input.Email" class="text-danger"></span>
-                        </div>
-                        <div class="form-group text-white">
-                             <label asp-for="Input.Password"></label>
+                                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                            </div>
+
+                            <!-- Password input -->
+                            <div class="form-group">
+                                <label asp-for="Input.Password"></label>
                                 <input asp-for="Input.Password" class="form-control" />
-                            <span asp-validation-for="Input.Password" class="text-danger"></span>
-                        </div>
-                            <div class="form-group text-white row mb-4">
-                                <div class="col d-flex justify-content">
-                                    <div class="checkbox">
-                                        <label asp-for="Input.RememberMe">
-                                            <input asp-for="Input.RememberMe" />
-                                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                                        </label>
+                                <span asp-validation-for="Input.Password" class="text-danger"></span>
+                            </div>
+
+                            <!-- 2 column grid layout for inline styling -->
+                            <div class="row mb-4">
+                                <div class="col d-flex justify-content-center">
+                                    <!-- Checkbox -->
+                                    <div class="form-group row mb-4">
+                                        <div class="col d-flex justify-content">
+                                            <div class="checkbox">
+                                                <label asp-for="Input.RememberMe">
+                                                    <input asp-for="Input.RememberMe" />
+                                                    @Html.DisplayNameFor(m => m.Input.RememberMe)
+                                                </label>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+
+                                <div class="col text-center">
+                                    <!-- Simple link -->
+                                    <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                                </div>
+                            </div>
+
+                            <!-- Submit button -->
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary">Sign in</button>
                             </div>
                         </form>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary">Sign in</button>
-                        </div>
-                        <div class="form-group">
-                            <p>
-                                <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                            </p>
-                            <p>
-                                <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                            </p>
-                        </div>
-                    </section>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-<style>
-    #intro {
-        background-image: url(https://mdbootstrap.com/img/new/fluid/city/008.jpg);
-        height: 100vh;
-    }
-</style>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+</body>
+    <!-- Background image -->
+</html>
