update client front-end

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -36,7 +36,7 @@
             <div class="container">
                     <div class="row justify-content-center" style="padding-top: 50px; padding-bottom: 30px">
                     <div class="col-xl-10 col-md-10" style="padding-top: 50px; padding-bottom: 50px">
-                        <form class="bg-white rounded shadow-5-strong p-5">
+                            <form id="account" method="post" class="bg-white rounded shadow-5-strong p-5">
                                 <h1 class="text-center">Login</h1>
                             <!-- Email input -->
                             <div class="form-group">
