--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -36,7 +36,7 @@
             <div class="container">
                     <div class="row justify-content-center" style="padding-top: 50px; padding-bottom: 30px">
                     <div class="col-xl-10 col-md-10" style="padding-top: 50px; padding-bottom: 50px">
-                        <form class="bg-white rounded shadow-5-strong p-5" style="width:500px">
+                            <form class="bg-white rounded shadow-5-strong p-5" style="width:500px" asp-route-returnUrl="@Model.ReturnUrl" method="post">
                                 <h1 class="text-center">Register</h1>
                             <!-- Email input -->
                             <div class="form-group">
