--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,57 +1,64 @@
 ﻿@model List<Item>
 @{
     var sum = 0.00;
+    Layout = "__ClientLayout";
 }
-@if (TempData["MessageRemove"] != null)
+@if (TempData["MessageNull"] != null)
 {
-    <div class="alert alert-danger">@TempData["MessageRemove"]</div>
+        <div class="alert alert-danger">@TempData["MessageNull"]</div>
 }
-@if (TempData["MessageDecrease"] != null)
+else
 {
-    <div class="alert alert-danger">@TempData["MessageDecrease"]</div>
-}
-@if (TempData["MessageIncrease"] != null)
-{
-    <div class="alert alert-danger">@TempData["MessageIncrease"]</div>
-}
-<table class="table table-bordered text-center">
-    <tr>
-        <th>ID</th>
-        <th>Book</th>
-        <th>Price</th>
-        <th>Quantity</th>
-        <th>Total</th>
-        <th>Action</th>
-    </tr>
-    <tr>@Model.Count</tr>
-    @foreach (var item in Model)
+    @if (TempData["MessageRemove"] != null)
     {
-        <tr>
-            <td>@item.Id</td>
-            <td>
-                <img src="@item.book.Image" width="100" height="100">
-                <div>@item.book.Title</div>
-            </td>
-            <td>@item.book.Price</td>
-            <td>
-                @if (TempData["MessageDecrease"] == null)
-                {
-                    <a asp-controller="Cart" asp-action="DecreaseQuantityToOne" asp-route-id="@item.Id">-</a>
-                }
-                @item.Item_Quantity
-                @if (TempData["MessageIncrease"] == null)
-                {
-                    <a asp-controller="Cart" asp-action="IncreaseQuantityToOne" asp-route-id="@item.Id">+</a>
-                }
-            </td>
-            <td>@item.Total</td>
-            <td><a asp-controller="Cart" asp-action="Remove" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Remove</a></td>
-        </tr>
-        sum += item.Total;
+            <div class="alert alert-danger">@TempData["MessageRemove"]</div>
     }
-    <tr>
-        <td colspan="4">Total</td>
-        <td>@(sum)</td>
-        <td><a class="btn btn-info btn-sm" asp-controller="Customer" asp-action="CheckOut">Checkout</a></td>
-    </tr>
-</table>
+    @if (TempData["MessageDecrease"] != null)
+    {
+            <div class="alert alert-danger">@TempData["MessageDecrease"]</div>
+    }
+    @if (TempData["MessageIncrease"] != null)
+    {
+            <div class="alert alert-danger">@TempData["MessageIncrease"]</div>
+    }
+    <table class="table table-bordered text-center mt-3">
+        <tr>
+            <th>ID</th>
+            <th>Book</th>
+            <th>Price</th>
+            <th>Quantity</th>
+            <th>Total</th>
+            <th>Action</th>
+        </tr>
+        @foreach (var item in Model)
+        {
+                <tr>
+                    <td>@item.Id</td>
+                    <td>
+                        <img src="~/image/@item.book.Image" width="100" height="100">
+                        <div>@item.book.Title</div>
+                    </td>
+                    <td>@item.book.Price</td>
+                    <td>
+                    @if (TempData["MessageDecrease"] == null)
+                    {
+                                <a asp-controller="Cart" asp-action="DecreaseQuantityToOne" asp-route-id="@item.Id">-</a>
+                    }
+                    @item.Item_Quantity
+                    @if (TempData["MessageIncrease"] == null)
+                    {
+                                <a asp-controller="Cart" asp-action="IncreaseQuantityToOne" asp-route-id="@item.Id">+</a>
+                    }
+                    </td>
+                    <td>@item.Total</td>
+                    <td><a asp-controller="Cart" asp-action="Remove" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Remove</a></td>
+                </tr>
+            sum += item.Total;
+        }
+        <tr>
+            <td colspan="4">Total</td>
+            <td>@(sum)</td>
+            <td><a class="btn btn-info btn-sm" asp-controller="Customer" asp-action="CheckOut">Checkout</a></td>
+        </tr>
+    </table>
+}
