--- a/Views/Shared/__ClientLayout.cshtml
+++ b/Views/Shared/__ClientLayout.cshtml
@@ -1,22 +1,16 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
   <link rel="stylesheet" href="~/css/index/style.css"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+  <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
   <link rel="stylesheet" href="~/css/site.css" />
-    @*<link rel="stylesheet" href="~/css/index/demo.css" />*@
     
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
     integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
@@ -92,7 +86,6 @@
 .carousel-set img {
     height: 300px;
 }
-
 .option a {
     text-decoration: none;
     font-weight: bold;
@@ -100,6 +93,10 @@
     margin-right: 30px;
     margin-left: 20px;
 }
+.drop-child{
+    display:none;
+}
+
     </style>
 </head>
 
@@ -110,7 +107,7 @@
         <div class="logo pt-3 pl-5 col-lg-2">
           <img src="~/image/logo.png" height="100" width="100">
         </div>
-        <div class="col-lg-7 ml-2 search">
+        <div class="col-lg-6 ml-2 search">
           <form>
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Enter book's name" style="width: 500px;">
@@ -126,21 +123,39 @@
           <div class="mt-5">
             @if (SignInManager.IsSignedIn(User))
 {
-                 <div class="pr-2 mr-3"><a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="text-light bg-dark form-control pr-3"><i
-      class="mt-1 fa fa-user pr-3s">Account</i></a></div>
+                 <div class="pr-2 mr-1" style="width:140px;"><a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="text-light bg-dark form-control pr-3"><i
+      class="mt-1 fa fa-user pr-3s">My Account</i></a></div>
 
-                <form  class="pr-1 mr-3" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" >
+                <form  class="pr-1 mr-5" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" >
                     <button  type="submit" class="text-light bg-dark form-control">Logout</button>
             </form>
 }
 else
 {
-    <div class="pr-1 mr-3"><a asp-area="Identity" asp-page="/Account/Login" class="text-light bg-dark form-control"><i
+    <div class="pr-2 mr-5"><a asp-area="Identity" asp-page="/Account/Login" class="text-light bg-dark form-control"><i
       class="mt-1 fa fa-user pr-3">Login/SignUp</i></a></div>
 }
-            <a href="#" class="form-control cart"><i class="mt-1 fa fa-shopping-cart">Cart</i></a>
+                           <div class="dropdown drop-op ml-5">
+                                <a asp-controller="Cart" asp-action="Index" type="button" class="form-control dropdown-toggle" data-toggle="dropdown">
+                                    <i class="mt-1 fa fa-shopping-cart">Cart</i>
+                                </a>
+                                  <div class="dropdown-menu drop-child">
+                                @if (@TempData["MessageNull"] != null)
+                                    {
+                                            <div class="alert alert-danger">@TempData["MessageNull"]</div>
+                                    }
+                                    else{
+                                        for(int i = 0; i< ViewBag.count;i++)
+                                        {
+                                            <a class="dropdown-item" asp-controller="Cart" asp-action="Index">
+                                                <img class="mr-3" src="~/image/@ViewData["Image"+i+""]" width="30" height="30">
+                                                @ViewData["Title"+i+""]
+                                            </a>
+                                        }
+                                    }
+                                  </div>
+                            </div>
           </div>
-
         </div>
       </div>
       <div class="bread-crumb pl-5 col-lg-12">
@@ -151,11 +166,13 @@ else
   <main class="main col-lg-12 pl-5 mt-5">
     <div class="pl-5 col-lg-2">
       <div class="bg-main" >
+          <a asp-controller="Customer" asp-action="Index" class="pl-3 font-weight-bold col-lg-12" style="text-decoration:none;color:black;">Home</a>
         <span class="pl-3 font-weight-bold col-lg-12">Category</span>
         <div class="col-lg-12 category bread-crumb">
-          <a href="#" class="col-lg-12 mr-2">Horror</a>
-          <a href="#" class="col-lg-12 mr-2">Manga</a>
-          <a href="#" class="col-lg-12 mr-2">Sience</a>
+            @foreach (var category in ViewBag.Categories)
+            {
+                <a href="#" class="col-lg-12 mr-2">@category.Name</a>
+            }
         </div>
       </div>
     </div>
@@ -193,7 +210,7 @@ else
         </div>
       </div>
       <div class="option mt-3 pl-3 col-lg-12 pb-4" style="border-bottom: 1px solid gray;">
-          <a class="ml-0" href="">All</a>|
+          <a class="ml-0" asp-controller="Customer" asp-action="Index">All</a>|
           <a href="">New</a>|
           <a href="">Hot</a>|
           <a href="">Name: A-Z</a>|
@@ -213,5 +230,5 @@ else
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
-
+</div>
 </html>
