--- a/Views/Shared/__ClientLayout.cshtml
+++ b/Views/Shared/__ClientLayout.cshtml
@@ -108,12 +108,12 @@
           <img src="~/image/logo.png" height="100" width="100">
         </div>
         <div class="col-lg-6 ml-2 search">
-          <form>
+                    <form asp-controller="Customer" asp-action="Search">
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Enter book's name" style="width: 500px;">
+              <input type="text" class="form-control" placeholder="Enter book's name" style="width: 500px;" name="keyword">
               <div class="input-group-append">
-                <button class="px-4 btn btn-secondary" type="button">
-                  <i class="mt-1 fa fa-search">Search</i>
+                <button class="px-4 btn btn-secondary" type="submit" >
+                                    <i class="mt-1 fa fa-search">Search</i>
                 </button>
               </div>
             </div>
@@ -166,8 +166,8 @@ else
   <main class="main col-lg-12 pl-5 mt-5">
     <div class="pl-5 col-lg-2">
       <div class="bg-main" >
-          <a asp-controller="Customer" asp-action="Index" class="pl-3 font-weight-bold col-lg-12" style="text-decoration:none;color:black;">Home</a>
-        <span class="pl-3 font-weight-bold col-lg-12">Category</span>
+          <a asp-controller="Customer" asp-action="Index" class="pl-3 mr-5 font-weight-bold col-lg-12" style="text-decoration:none;color:black;">Home</a>
+        <span class="pl-3 font-weight-bold col-lg-12">Genre</span>
         <div class="col-lg-12 category bread-crumb">
             @foreach (var category in ViewBag.Categories)
             {
@@ -213,10 +213,10 @@ else
           <a class="ml-0" asp-controller="Customer" asp-action="Index">All</a>|
           <a href="">New</a>|
           <a href="">Hot</a>|
-          <a href="">Name: A-Z</a>|
-          <a href="">Name: Z-A</a>|
-          <a href="">Price: A-Z</a>|
-          <a href="">Price: Z-A</a>
+                <a asp-controller="Customer" asp-action="SortTitleAsc">Name: A-Z</a>|
+                <a asp-controller="Customer" asp-action="SortTitleDesc">Name: Z-A</a>|
+                <a asp-controller="Customer" asp-action="SortPriceAsc">Price: A-Z</a>|
+                <a asp-controller="Customer" asp-action="SortPriceDesc">Price: Z-A</a>
       </div>
       <div class="col-lg-12">
         <main role="main" class="pb-3">
