--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -10,9 +10,11 @@
                 <div class="col-3 hp mt-4">
 
                     <div class="card shadow-sm">
-                        <a href="#">
-                                <img src="~/image/@book.Image" class="card-img-top" alt="@book.Title" />
+                        <a data-toggle="modal" data-target="#myModal">
+                            <img src="~/image/@book.Image" class="card-img-top" alt="@book.Title" />
                         </a>
+                                
+                        
                         <div class="label-top shadow-sm bg-danger">
                             <a class="text-white" href="#">New</a>
                         </div>
@@ -50,3 +52,55 @@
         </div>
     </div>
 </main>
+
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">x</span></button>
+            </div>
+
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-5 col-sm-5 col-xs-12">
+                            <div class="modal-tab">
+                                <div class="product-details-large tab-content">
+                                @foreach (var item in Model)
+                                {
+                                    <div class="tab-pane active" id="image-1">
+                                        <img src="~/image/@Html.DisplayFor(modelItem => item.Image)" class="card-img-top" alt="@item.Title" />
+                                        </div>
+                                }
+                                    
+                                
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-7 col-sm-7 col-xs-12">
+                            <div class="modal-pro-content">
+                            @foreach (var book in Model)
+                            {
+                            <h3>@book.Title</h3>
+                                <div class="price">
+                                <span>$@book.Price</span>
+                                </div>
+                                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet.</p>
+
+                                <form action="#">
+                                    <input type="number" value="1" />
+                                    <button>Add to cart</button>
+                                </form>
+                                <span><i class="fa fa-check"></i> In stock</span>
+                            
+                            }
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            
+            
+        </div>
+    </div>
+</div>
+
