--- a/Views/Customer/ListBillOfCustomer.cshtml
+++ b/Views/Customer/ListBillOfCustomer.cshtml
@@ -1,13 +1,29 @@
 ﻿@model List<Bill>
-
+@{
+    Layout = "__ClientLayout";
+    
+}
     @if(Model.Count == null)
     {
         <span>Rong</span>
     }
     else{
-        foreach (var item in Model)
-        {
-            @item.Price <span>,</span>
+        <table class="table table-bordered">
+            <tr>
+                <th>Oder date</th>
+                <th>Phone</th>
+                <th>Address</th>
+                <th>Total</th>
+            </tr>
             
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.OrderDate</td>
+                <td>@item.Phone</td>
+                <td>@item.Address</td>
+                <td>@item.Price</td>
+            </tr>
         }
+        </table>
     }
