--- a/Views/Customer/Dashboard.cshtml
+++ b/Views/Customer/Dashboard.cshtml
@@ -2,28 +2,39 @@
 @{
     Layout = "__Management";
     double sum = 0;
-    string rate = "Rating development: ";
     double lastM = 0;
     double rating = 0;
     foreach(var bill in Model)
     {
         sum += bill.Price;
-        if (lastM > 0) 
-        {
-            if (lastM > bill.Price) rating = (lastM / bill.Price) * 100*-1;
-            else { rating = (lastM / bill.Price) * 100; }
-        }
-        rate += ""+ rating + "%." + "=> ";
-        lastM = bill.Price;
     }
 }
-<div class="bg-light mt-2 align-content-center">
+<div class="bg-light mt-2 align-content-center mb-5 pb-4">
     <h1 class="text-dark">Turnover</h1>
     <div class="col-12 row text-dark">
-        <canvas class="col-9" id="myChart" style="width:100%;max-width:600px"></canvas>
+        <canvas class="col-9 mr-5" id="myChart" style="width:100%;max-width:600px"></canvas>
         <div class="col-3 row">
             <span class="col-12">Turnover: $@sum</span>
-            <span class="col-12">@rate</span>
+            <table class="text-dark border table-bordered col-12">
+                <tr>
+                    <th>Month</th>
+                    <th>Growth rate</th>
+                </tr>
+                @foreach(var bill in Model)
+    {
+        sum += bill.Price;
+        if (lastM > 0) 
+        {
+            if (lastM > bill.Price) rating = (int)((lastM / bill.Price) * 100*-1);
+            else { rating = (int)((lastM / bill.Price) * 100); }
+        }
+        <tr>
+        <td>@bill.OrderDate.Month</td>
+        <td>@rating %</td>
+        @{lastM = bill.Price;}
+        </tr>
+    }
+            </table>
         </div>
     </div>
 </div>
